# django_yunohost_integration

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  cli.py  dev-cli.py  manage.py  manage_local_test.py  noxfile.py  publish.py  pyproject.toml  requirements.dev.txt  requirements.txt  requirements.ynh.txt
.github/workflows/: install_python.yml  pytest.yml  pythonapp.yml  tests.yml
.run/: Template Python.run.xml  dev-cli test.run.xml  ruff check --fix.run.xml
conf/: settings.py  setup_user.py  urls.py
django_yunohost_integration/: __init__.py  __main__.py  apps.py  base_settings.py  compat.py  constants.py  dev_shell.py  local_settings_source.py  local_test.py  path_utils.py  pytest_helper.py  system_checks.py  test_utils.py  yunohost_utils.py
django_yunohost_integration/cli/: cli_app.py  dev.py
django_yunohost_integration/cli_dev/: __init__.py  code_style.py  local_test.py  packaging.py  testing.py  update_readme_history.py
django_yunohost_integration/install_python/: install_python.py
django_yunohost_integration/install_python/tests/: test_install_python.py
django_yunohost_integration/sso_auth/: auth_backend.py  auth_middleware.py
django_yunohost_integration/tests/: __init__.py  local_test_utils.py  test_django_ynh.py  test_doctests.py  test_manage.py  test_project_setup.py  test_readme.py  test_system_checks.py  test_utils.py  test_yunohost_utils.py
django_yunohost_integration/yunohost/: ynh_jwt.py
django_yunohost_integration/yunohost/tests/: test_ynh_jwt.py
tests/: conftest.py  test_django_ynh.py  test_lint.py  test_project_setup.py  test_system_checks.py  test_utils.py
