[project]
name = "django_yunohost_integration"
dynamic = ["version"]
description = "Glue code to package django projects as yunohost apps."
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
authors = [
    {name = 'Jens Diemer', email = 'git@jensdiemer.de'}
]
requires-python = ">=3.9,<4" # Stay with 3.9 until YunoHost used >=Debian 11 (Bullseye)
dependencies = [
    'django',  # https://github.com/django/django
    'django-tools',  # https://github.com/jedie/django-tools

    'colorlog',   # https://github.com/borntyping/python-colorlog
    'packaging',   # https://github.com/pypa/packaging
    'pyyaml',   # https://github.com/yaml/pyyaml

]
[project.optional-dependencies]
ynh = [  # install "django_yunohost_integration" as YunoHost app:
    'gunicorn',
    'psycopg2', # Don't use "psycopg2-binary": It's not available on ARM boards see: https://github.com/jedie/PyInventory/issues/56
    'django-redis',
    'django-axes', # https://github.com/jazzband/django-axes
]
dev = [
    'django-axes', # https://github.com/jazzband/django-axes
    'django-example',  # https://github.com/jedie/django-example
    'bx_django_utils',   # https://github.com/boxine/bx_django_utils
    'requests-mock',  # https://github.com/jamielennox/requests-mock
    "cli-base-utilities>=0.3.0",  # https://github.com/jedie/cli-base-utilities
    "click",  # https://github.com/pallets/click/
    "rich-click",  # https://github.com/ewels/rich-click
    "rich",  # https://github.com/Textualize/rich

    "manageprojects>=0.15.0",  # https://github.com/jedie/manageprojects
    "pip-tools",  # https://github.com/jazzband/pip-tools/
    "tox",  # https://github.com/tox-dev/tox
    "coverage",  # https://github.com/nedbat/coveragepy
    "autopep8",  # https://github.com/hhatto/autopep8
    "pyupgrade",  # https://github.com/asottile/pyupgrade
    "flake8",  # https://github.com/pycqa/flake8
    "pyflakes",  # https://github.com/PyCQA/pyflakes
    "codespell",  # https://github.com/codespell-project/codespell
    "EditorConfig",  # https://github.com/editorconfig/editorconfig-core-py
    "safety",  # https://github.com/pyupio/safety
    "mypy",  # https://github.com/python/mypy
    "twine",  # https://github.com/pypa/twine

    # https://github.com/akaihola/darker
    # https://github.com/ikamensh/flynt
    # https://github.com/pycqa/isort
    # https://github.com/pygments/pygments
    "darker[flynt, isort, color]",

    "tomli",  # https://github.com/hukkin/tomli
    #
    # tomli only needed for Python <3.11, but see pip bug:
    # https://github.com/pypa/pip/issues/9644 / https://github.com/jazzband/pip-tools/issues/1866
    #'tomli;python_version<"3.11"',  # https://github.com/hukkin/tomli
]

[project.urls]
Documentation = "https://github.com/YunoHost-Apps/django_yunohost_integration"
Source = "https://github.com/YunoHost-Apps/django_yunohost_integration"

[project.scripts]
django_yunohost_integration_app = "django_yunohost_integration.__main__:main"
django_yunohost_integration_dev = "django_yunohost_integration.cli.dev:main"

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=7.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["django_yunohost_integration*"]

[tool.setuptools.dynamic]
version = {attr = "django_yunohost_integration.__version__"}


[tool.darker]
src = ['.']
revision = "origin/main..."
line_length = 119
verbose = true
color = true
skip_string_normalization = true
diff = false
check = false
stdout = false
isort = true
flynt = true
lint = [
    "flake8",
]
log_level = "INFO"


[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/config_files/#pyprojecttoml-preferred-format
atomic=true
profile='black'
skip_glob=['.*', '*/htmlcov/*']
known_first_party=['django_yunohost_integration']
line_length=119
lines_after_imports=2


[tool.coverage.run]
branch = true
parallel = true
concurrency = ["multiprocessing"]
source = ['.']
command_line = '-m django_yunohost_integration test'

[tool.coverage.report]
omit = ['.*', '*/tests/*']
skip_empty = true
fail_under = 60
show_missing = true
exclude_lines = [
    'if self.debug:',
    'pragma: no cover',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
]


[tool.tox]  # https://tox.wiki/en/latest/config.html#pyproject-toml
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py{311,310,39}
skip_missing_interpreters = True

[testenv]
passenv = *
skip_install = true
commands_pre =
    pip install -U pip-tools
    pip-sync requirements.dev.txt
commands =
    {envpython} -m coverage run --context='{envname}'
    {envpython} -m coverage combine --append
    {envpython} -m coverage xml
    {envpython} -m coverage report
"""


[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
allow_redefinition = true  # https://github.com/python/mypy/issues/7165
show_error_codes = true
plugins = []
exclude = ['.venv', 'tests']


[manageprojects] # https://github.com/jedie/manageprojects
initial_revision = "5c06368"
initial_date = 2023-02-19T17:27:46+01:00
cookiecutter_template = "https://github.com/jedie/cookiecutter_templates/"
cookiecutter_directory = "piptools-python"
applied_migrations = [
    "877e2ec", # 2023-08-17T20:54:24+02:00
    "56c0eb7", # 2023-12-22T08:36:44+01:00
]

[manageprojects.cookiecutter_context.cookiecutter]
full_name = "Jens Diemer"
github_username = "jedie"
author_email = "git@jensdiemer.de"
package_name = "django_yunohost_integration"
package_version = "0.5.1"
package_description = "Glue code to package django projects as yunohost apps."
package_url = "https://github.com/YunoHost-Apps/django_yunohost_integration"
issues_url = "https://github.com/YunoHost-Apps/django_yunohost_integration/issues"
license = "GPL-3.0-or-later"
_template = "https://github.com/jedie/cookiecutter_templates/"
