[project]
name = "django_yunohost_integration"
dynamic = ["version"]
description = "Glue code to package django projects as yunohost apps."
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
authors = [
    {name = 'Jens Diemer', email = 'git@jensdiemer.de'}
]
requires-python = ">=3.11"
dependencies = [
    'django',  # https://github.com/django/django
    'django-tools',  # https://github.com/jedie/django-tools

    'colorlog',   # https://github.com/borntyping/python-colorlog
    'packaging',   # https://github.com/pypa/packaging
    'pyyaml',   # https://github.com/yaml/pyyaml
]
[project.optional-dependencies]
ynh = [  # install "django_yunohost_integration" as YunoHost app:
    'gunicorn',
    'psycopg[binary]', # https://github.com/psycopg/psycopg
    'django-redis',
    'django-axes', # https://github.com/jazzband/django-axes
]
dev = [
    'django-axes', # https://github.com/jazzband/django-axes
    'django-example',  # https://github.com/jedie/django-example
    'bx_django_utils',   # https://github.com/boxine/bx_django_utils
    'requests-mock',  # https://github.com/jamielennox/requests-mock
    "cli-base-utilities",  # https://github.com/jedie/cli-base-utilities
    "click",  # https://github.com/pallets/click/
    "rich-click",  # https://github.com/ewels/rich-click
    "rich",  # https://github.com/Textualize/rich

    "manageprojects",  # https://github.com/jedie/manageprojects
    "pip-tools",  # https://github.com/jazzband/pip-tools/
    "tox",  # https://github.com/tox-dev/tox
    "coverage",  # https://github.com/nedbat/coveragepy
    "autopep8",  # https://github.com/hhatto/autopep8
    "pyupgrade",  # https://github.com/asottile/pyupgrade
    "flake8",  # https://github.com/pycqa/flake8
    "pyflakes",  # https://github.com/PyCQA/pyflakes
    "codespell",  # https://github.com/codespell-project/codespell
    "EditorConfig",  # https://github.com/editorconfig/editorconfig-core-py
    "pip-audit",  # https://github.com/pypa/pip-audit
    "mypy",  # https://github.com/python/mypy
    "twine",  # https://github.com/pypa/twine
    "typeguard",  # https://github.com/agronholm/typeguard/
    "pre-commit",  # https://github.com/pre-commit/pre-commit

    # https://github.com/akaihola/darker
    # https://github.com/ikamensh/flynt
    # https://github.com/pycqa/isort
    # https://github.com/pygments/pygments
    "darker[flynt, isort, color]",

    # Indirect requirement work-a-round for: https://github.com/jazzband/pip-tools/issues/1866
    'backports.tarfile',
]

[project.urls]
Documentation = "https://github.com/YunoHost-Apps/django_yunohost_integration"
Source = "https://github.com/YunoHost-Apps/django_yunohost_integration"

[project.scripts]
django_yunohost_integration_app = "django_yunohost_integration.__main__:main"
django_yunohost_integration_dev = "django_yunohost_integration.cli.dev:main"

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=7.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["django_yunohost_integration*"]

[tool.setuptools.dynamic]
version = {attr = "django_yunohost_integration.__version__"}


[tool.cli_base]
version_module_name = "django_yunohost_integration" # Used in cli_base.cli_tools.git_history.update_readme_history()

[tool.cli_base.pip_audit]
requirements=["requirements.dev.txt"]
strict=true
require_hashes=true
ignore-vuln=[]

[ynh-integration]
local_settings_source= "django_yunohost_integration/local_settings_source.py"

[tool.darker]
src = ['.']
revision = "origin/main..."
line_length = 119
color = true
skip_string_normalization = true
diff = false
check = false
stdout = false
isort = true
lint = [
    "flake8",
]
log_level = "INFO"


[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/config_files/#pyprojecttoml-preferred-format
atomic=true
profile='black'
skip_glob=['.*', '*/htmlcov/*']
known_first_party=['django_yunohost_integration']
line_length=119
lines_after_imports=2


[tool.coverage.run]
branch = true
parallel = true
concurrency = ["multiprocessing"]
source = ['.']
command_line = '-m django_yunohost_integration test'

[tool.coverage.report]
omit = ['.*', '*/tests/*']
skip_empty = true
fail_under = 60
show_missing = true
exclude_lines = [
    'if self.debug:',
    'pragma: no cover',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
]


[tool.tox]  # https://tox.wiki/en/latest/config.html#pyproject-toml
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py{312,311}
skip_missing_interpreters = True

[testenv]
passenv = *
skip_install = true
commands_pre =
    pip install -U pip-tools
    pip-sync requirements.dev.txt
commands =
    {envpython} -m coverage run --context='{envname}'
    {envpython} -m coverage combine --append
    {envpython} -m coverage xml
    {envpython} -m coverage report
"""


[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
allow_redefinition = true  # https://github.com/python/mypy/issues/7165
show_error_codes = true
plugins = []
exclude = ['.venv', 'tests']


[manageprojects] # https://github.com/jedie/manageprojects
initial_revision = "5c06368"
initial_date = 2023-02-19T17:27:46+01:00
cookiecutter_template = "https://github.com/jedie/cookiecutter_templates/"
cookiecutter_directory = "piptools-python"
applied_migrations = [
    "877e2ec", # 2023-08-17T20:54:24+02:00
    "56c0eb7", # 2023-12-22T08:36:44+01:00
    "52669d0", # 2024-08-02T15:47:04+02:00
    "3dac094", # 2024-08-25T15:13:50+02:00
]

[manageprojects.cookiecutter_context.cookiecutter]
full_name = "Jens Diemer"
github_username = "jedie"
author_email = "git@jensdiemer.de"
package_name = "django_yunohost_integration"
package_version = "0.5.1"
package_description = "Glue code to package django projects as yunohost apps."
package_url = "https://github.com/YunoHost-Apps/django_yunohost_integration"
issues_url = "https://github.com/YunoHost-Apps/django_yunohost_integration/issues"
license = "GPL-3.0-or-later"
_template = "https://github.com/jedie/cookiecutter_templates/"
